[FEATURE] drawer for order detail

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -597,7 +597,7 @@
   "common.label.owner": "Founder",
   "common.label.pageTitle": "Page Title",
   "common.label.participant": "participant",
-  "common.label.participantPosition": "Participant position",
+  "common.label.participantOccupation": "Participant occupation",
   "common.label.participants": "Number of people",
   "common.label.password": "Password",
   "common.label.paymentCreatedAt": "Transaction time",
@@ -771,6 +771,7 @@
   "common.status.expired": "Expired",
   "common.status.finished": "Finished",
   "common.status.invisible": "Hidden",
+  "common.status.marked": "Marked",
   "common.status.noAuthority": "No such authority",
   "common.status.notComplete": "Not Complete",
   "common.status.notPublished": "Not Published",
@@ -812,6 +813,7 @@
   "common.text.locale": "It will only be displayed when the front desk is the designated language family.",
   "common.text.minutes": "{minutes} minutes",
   "common.text.noAssignedInstructor": "No assigned instructor.",
+  "common.text.ogImageTips": "Recommend image size: 1200*630px",
   "common.text.period": ",",
   "common.text.purchasedAt": "{name} purchased at {date}",
   "common.text.resetPasswordNotation": "For security reasons, please go to the mailbox to change the password",
@@ -902,6 +904,7 @@
   "common.ui.publish": "Publish",
   "common.ui.register": "Register",
   "common.ui.registerNow": "Register",
+  "common.ui.reject": "Reject",
   "common.ui.rename": "Rename",
   "common.ui.reply": "Reply",
   "common.ui.reset": "Reset",
@@ -909,6 +912,7 @@
   "common.ui.save": "Save",
   "common.ui.search": "Search",
   "common.ui.selectFile": "Select File",
+  "common.ui.send": "Send",
   "common.ui.sendEmailAgain": "Send Again",
   "common.ui.set": "設為",
   "common.ui.showCreator": "Show Instructor",
@@ -1385,8 +1389,11 @@
   "form.PermissionGroup.PROJECT_FUNDING_NORMAL": "個人募資專案功能",
   "form.PermissionGroup.PROJECT_NORMAL": "個人專案功能",
   "form.PermissionGroup.PROJECT_ON_SALE_ADMIN": "促銷專案功能",
+  "form.PermissionGroup.PROJECT_PORTFOLIO_ADMIN": "所有作品專案功能",
+  "form.PermissionGroup.PROJECT_PORTFOLIO_NORMAL": "個人作品專案功能",
   "form.PermissionGroup.PROJECT_PRE_ORDER_ADMIN": "預購專案功能",
   "form.PermissionGroup.PROJECT_PRE_ORDER_NORMAL": "個人預購專案功能",
+  "form.PermissionGroup.PROJECT_ROLE_ADMIN": "角色管理",
   "form.PermissionGroup.SALES_CALL_ADMIN": "檢視業務專區",
   "form.PermissionGroup.SALES_EXPORT": "匯出所有訂單",
   "form.PermissionGroup.SALES_LEAD_ADMIN": "名單撥打",
@@ -1650,6 +1657,7 @@
   "order.label.invoiceUniformTitle": "Invoice Header",
   "order.label.memberEmail": "Member Email",
   "order.label.memberName": "Member Name",
+  "order.label.orderCountry": "下單國家",
   "order.label.orderCreatedAt": "Order created time",
   "order.label.orderDiscountName": "Discount Name",
   "order.label.orderDiscountTotalPrice": "Total discount",
@@ -2167,6 +2175,7 @@
   "project.*.editProject": "Edit Project",
   "project.*.expireAt": "Expiration Date",
   "project.*.fundingTerm": "Fundraising Term",
+  "project.*.noMarkedPortfolio": "No marked portfolio",
   "project.*.noProject": "There are no projects yet",
   "project.*.participantsAmount": "Participants",
   "project.*.portfolioTitle": "Title",
@@ -2191,7 +2200,10 @@
   "project.ProjectAdminPage.publishSettings": "Publish settings",
   "project.ProjectBasicForm.tag": "標籤",
   "project.ProjectCollectionTable.author": "Author",
+  "project.ProjectCollectionTable.mark": "Mark",
   "project.ProjectCollectionTable.title": "Title",
+  "project.ProjectParticipantBlock.occupationFieldRequired": "Please select a occupation.",
+  "project.ProjectParticipantBlock.participantFieldRequired": "Please select a participant.",
   "project.ProjectPlanAdminModal.deliverables": "Project Deliverables",
   "project.ProjectPlanCard.notSale": "已停售",
   "project.ProjectPlanCard.onSale": "發售中",
@@ -2202,9 +2214,13 @@
   "project.ProjectPlanProductSelector.sku": "料號（SKU）",
   "project.ProjectPortfolioBasicForm.tag": "tag",
   "project.ProjectPortfolioSettingsForm.cover": "cover",
+  "project.ProjectPortfolioSettingsForm.creator": "creator: {name}",
   "project.ProjectPortfolioSettingsForm.defaultImageTips": "Recommended image size: 1200*675px",
   "project.ProjectPortfolioSettingsForm.defaultVideoTips": "If video preview is not show in page, please check video url is correct",
   "project.ProjectPortfolioSettingsForm.hasSameOriginalSource": "Has same original source",
+  "project.ProjectPortfolioSettingsForm.hasSameOriginalSourceNotice1": "1. Other team members in the portfolio have uploaded, and you can go to the portfolio page to apply for being marked as one of the staff members.",
+  "project.ProjectPortfolioSettingsForm.hasSameOriginalSourceNotice2": "(2) The portfolio is likely to have been infringed, and you can report the portfolio and remove it from the shelves.",
+  "project.ProjectPortfolioSettingsForm.hasSameOriginalSourceNoticeTitle": "Possibility of portfolio from the same source:",
   "project.ProjectPortfolioSettingsForm.videoUrl": "Portfolio video url",
   "project.ProjectPublishAdminBlock.activateNow": "Publish",
   "project.ProjectPublishAdminBlock.activateShop": "Publish",
@@ -2218,6 +2234,10 @@
   "project.ProjectPublishAdminBlock.publishedPortfolioNotation": "Your portfolio is published now, it will show in page.",
   "project.ProjectPublishAdminBlock.unpublishedNotation": "Your project is not published, it will not show in page.",
   "project.ProjectPublishAdminBlock.unpublishedPortfolioNotation": "Your portfolio is not published, it will not show in page.",
+  "project.ProjectRejectMarkModal.hasRejectedMark": "Has rejected mark",
+  "project.ProjectRejectMarkModal.pleaseEnterAReasonForRejection": "Please enter a reason for rejection",
+  "project.ProjectRejectMarkModal.reason": "Reason",
+  "project.ProjectRejectMarkModal.rejectMark": "Reject Mark",
   "project.label.isParticipantsVisible": "Number of Purchasers",
   "project.label.isPublished": "Whether for sale",
   "project.label.planDescription": "Plan Description",
@@ -2336,6 +2356,46 @@
   "questionLibrary.ui.isAnswer": "This is the correct answer",
   "questionLibrary.ui.sortQuestions": "Sort Questions",
   "questionLibrary.ui.useZhuYinFont": "Use Zhuyin Font",
+  "sale.InvoiceCard.donationCode": "發票捐贈碼",
+  "sale.InvoiceCard.invoiceAddress": "發票地址",
+  "sale.InvoiceCard.invoiceCarrier": "發票載具",
+  "sale.InvoiceCard.invoiceEmail": "聯絡信箱",
+  "sale.InvoiceCard.invoiceFailed": "開立失敗 {errorCode}",
+  "sale.InvoiceCard.invoiceIssuedAt": "發票開立時間",
+  "sale.InvoiceCard.invoiceName": "發票姓名",
+  "sale.InvoiceCard.invoiceNumber": "發票編號",
+  "sale.InvoiceCard.invoicePending": "未開立電子發票",
+  "sale.InvoiceCard.invoicePhone": "發票電話",
+  "sale.InvoiceCard.invoiceStatus": "發票狀態",
+  "sale.InvoiceCard.invoiceSuccess": "開立成功",
+  "sale.InvoiceCard.invoiceTarget": "發票對象",
+  "sale.InvoiceCard.uniformNumber": "發票統編",
+  "sale.InvoiceCard.uniformTitle": "發票抬頭",
+  "sale.OrderCard.nameAndEmail": "姓名 / Email",
+  "sale.OrderCard.orderCreatedAt": "訂單建立",
+  "sale.OrderCard.orderDiscountItem": "折抵項目",
+  "sale.OrderCard.orderId": "訂單編號",
+  "sale.OrderCard.orderProductItem": "產品項目",
+  "sale.OrderCard.totalPrice": "訂單總額",
+  "sale.OrderDetailDrawer.invoiceInfo": "發票資訊",
+  "sale.OrderDetailDrawer.orderDetail": "訂單詳情",
+  "sale.OrderDetailDrawer.orderInfo": "訂單資訊",
+  "sale.OrderDetailDrawer.otherInfo": "其他資訊",
+  "sale.OrderDetailDrawer.paymentInfo": "交易紀錄",
+  "sale.OrderOtherInfoCard.country": "國家",
+  "sale.OrderOtherInfoCard.giftPlan": "贈品項目",
+  "sale.OrderOtherInfoCard.orderLogExecutor": "承辦人與分潤",
+  "sale.OrderOtherInfoCard.recipientAddress": "收件地址",
+  "sale.OrderOtherInfoCard.recipientName": "收件人",
+  "sale.OrderOtherInfoCard.recipientPhone": "收件電話",
+  "sale.OrderOtherInfoCard.referrer": "推薦人",
+  "sale.OrderOtherInfoCard.sharingCode": "推廣網址",
+  "sale.OrderOtherInfoCard.sharingNote": "推廣用途",
+  "sale.PaymentCard.gateway": "交易渠道",
+  "sale.PaymentCard.paidAt": "付款時間",
+  "sale.PaymentCard.paymentNo": "交易編號",
+  "sale.PaymentCard.paymentStatus": "交易狀態",
+  "sale.PaymentCard.price": "金額",
   "sale.SaleCollectionAdminCard.cancel": "Cancel",
   "sale.SaleCollectionAdminCard.deliver": "交付",
   "sale.SaleCollectionAdminCard.open": "Open",
