--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -597,7 +597,7 @@
   "common.label.owner": "建立者",
   "common.label.pageTitle": "Page Title",
   "common.label.participant": "participant",
-  "common.label.participantPosition": "Participant position",
+  "common.label.participantOccupation": "Participant occupation",
   "common.label.participants": "人数",
   "common.label.password": "密码",
   "common.label.paymentCreatedAt": "交易时间",
@@ -771,6 +771,7 @@
   "common.status.expired": "到期",
   "common.status.finished": "已结束",
   "common.status.invisible": "隐藏",
+  "common.status.marked": "Marked",
   "common.status.noAuthority": "无此权限",
   "common.status.notComplete": "尚有未完成项目",
   "common.status.notPublished": "未发布",
@@ -812,6 +813,7 @@
   "common.text.locale": "当前台为指定语系时才会显示，若不选择全语系皆显示",
   "common.text.minutes": "{minutes} 分钟",
   "common.text.noAssignedInstructor": "尚未指定讲师",
+  "common.text.ogImageTips": "Recommend image size: 1200*630px",
   "common.text.period": "，",
   "common.text.purchasedAt": "{name} 于 {date} 购买",
   "common.text.resetPasswordNotation": "为了安全考量，请至信箱收信更换密码",
@@ -902,6 +904,7 @@
   "common.ui.publish": "立即发布",
   "common.ui.register": "注册",
   "common.ui.registerNow": "立即注册",
+  "common.ui.reject": "Reject",
   "common.ui.rename": "重新命名",
   "common.ui.reply": "回覆",
   "common.ui.reset": "重置",
@@ -909,6 +912,7 @@
   "common.ui.save": "储存",
   "common.ui.search": "查询",
   "common.ui.selectFile": "选择档案",
+  "common.ui.send": "Send",
   "common.ui.sendEmailAgain": "再寄一次",
   "common.ui.set": "設為",
   "common.ui.showCreator": "显示讲师",
@@ -1385,8 +1389,11 @@
   "form.PermissionGroup.PROJECT_FUNDING_NORMAL": "个人募资专案功能",
   "form.PermissionGroup.PROJECT_NORMAL": "个人专案功能",
   "form.PermissionGroup.PROJECT_ON_SALE_ADMIN": "促销专案功能",
+  "form.PermissionGroup.PROJECT_PORTFOLIO_ADMIN": "所有作品專案功能",
+  "form.PermissionGroup.PROJECT_PORTFOLIO_NORMAL": "個人作品專案功能",
   "form.PermissionGroup.PROJECT_PRE_ORDER_ADMIN": "预购专案功能",
   "form.PermissionGroup.PROJECT_PRE_ORDER_NORMAL": "个人预购专案功能",
+  "form.PermissionGroup.PROJECT_ROLE_ADMIN": "角色管理",
   "form.PermissionGroup.SALES_CALL_ADMIN": "检视业务专区",
   "form.PermissionGroup.SALES_EXPORT": "汇出所有订单",
   "form.PermissionGroup.SALES_LEAD_ADMIN": "名单拨打",
@@ -1650,6 +1657,7 @@
   "order.label.invoiceUniformTitle": "发票抬头",
   "order.label.memberEmail": "会员信箱",
   "order.label.memberName": "会员姓名",
+  "order.label.orderCountry": "下單國家",
   "order.label.orderCreatedAt": "订单建立时间",
   "order.label.orderDiscountName": "折扣名称",
   "order.label.orderDiscountTotalPrice": "折扣总额",
@@ -2167,6 +2175,7 @@
   "project.*.editProject": "编辑方案",
   "project.*.expireAt": "截止日",
   "project.*.fundingTerm": "募资条件",
+  "project.*.noMarkedPortfolio": "No marked portfolio",
   "project.*.noProject": "尚未有任何专案",
   "project.*.participantsAmount": "参与人数",
   "project.*.portfolioTitle": "Title",
@@ -2191,7 +2200,10 @@
   "project.ProjectAdminPage.publishSettings": "Publish settings",
   "project.ProjectBasicForm.tag": "标签",
   "project.ProjectCollectionTable.author": "Author",
+  "project.ProjectCollectionTable.mark": "Mark",
   "project.ProjectCollectionTable.title": "Title",
+  "project.ProjectParticipantBlock.occupationFieldRequired": "Please select a occupation.",
+  "project.ProjectParticipantBlock.participantFieldRequired": "Please select a participant.",
   "project.ProjectPlanAdminModal.deliverables": "交付项目",
   "project.ProjectPlanCard.notSale": "已停售",
   "project.ProjectPlanCard.onSale": "发售中",
@@ -2202,9 +2214,13 @@
   "project.ProjectPlanProductSelector.sku": "料号（SKU）",
   "project.ProjectPortfolioBasicForm.tag": "tag",
   "project.ProjectPortfolioSettingsForm.cover": "cover",
+  "project.ProjectPortfolioSettingsForm.creator": "creator: {name}",
   "project.ProjectPortfolioSettingsForm.defaultImageTips": "Recommended image size: 1200*675px",
   "project.ProjectPortfolioSettingsForm.defaultVideoTips": "If video preview is not show in page, please check video url is correct",
   "project.ProjectPortfolioSettingsForm.hasSameOriginalSource": "Has same original source",
+  "project.ProjectPortfolioSettingsForm.hasSameOriginalSourceNotice1": "1. Other team members in the portfolio have uploaded, and you can go to the portfolio page to apply for being marked as one of the staff members.",
+  "project.ProjectPortfolioSettingsForm.hasSameOriginalSourceNotice2": "(2) The portfolio is likely to have been infringed, and you can report the portfolio and remove it from the shelves.",
+  "project.ProjectPortfolioSettingsForm.hasSameOriginalSourceNoticeTitle": "Possibility of portfolio from the same source:",
   "project.ProjectPortfolioSettingsForm.videoUrl": "Portfolio video url",
   "project.ProjectPublishAdminBlock.activateNow": "Publish",
   "project.ProjectPublishAdminBlock.activateShop": "Publish",
@@ -2218,6 +2234,10 @@
   "project.ProjectPublishAdminBlock.publishedPortfolioNotation": "Your portfolio is published now, it will show in page.",
   "project.ProjectPublishAdminBlock.unpublishedNotation": "Your project is not published, it will not show in page.",
   "project.ProjectPublishAdminBlock.unpublishedPortfolioNotation": "Your portfolio is not published, it will not show in page.",
+  "project.ProjectRejectMarkModal.hasRejectedMark": "Has rejected mark",
+  "project.ProjectRejectMarkModal.pleaseEnterAReasonForRejection": "Please enter a reason for rejection",
+  "project.ProjectRejectMarkModal.reason": "Reason",
+  "project.ProjectRejectMarkModal.rejectMark": "Reject Mark",
   "project.label.isParticipantsVisible": "购买人数",
   "project.label.isPublished": "是否开卖",
   "project.label.planDescription": "方案描述",
@@ -2336,6 +2356,46 @@
   "questionLibrary.ui.isAnswer": "此为正确解答",
   "questionLibrary.ui.sortQuestions": "排序题目",
   "questionLibrary.ui.useZhuYinFont": "使用注音字形",
+  "sale.InvoiceCard.donationCode": "發票捐贈碼",
+  "sale.InvoiceCard.invoiceAddress": "發票地址",
+  "sale.InvoiceCard.invoiceCarrier": "發票載具",
+  "sale.InvoiceCard.invoiceEmail": "聯絡信箱",
+  "sale.InvoiceCard.invoiceFailed": "開立失敗 {errorCode}",
+  "sale.InvoiceCard.invoiceIssuedAt": "發票開立時間",
+  "sale.InvoiceCard.invoiceName": "發票姓名",
+  "sale.InvoiceCard.invoiceNumber": "發票編號",
+  "sale.InvoiceCard.invoicePending": "未開立電子發票",
+  "sale.InvoiceCard.invoicePhone": "發票電話",
+  "sale.InvoiceCard.invoiceStatus": "發票狀態",
+  "sale.InvoiceCard.invoiceSuccess": "開立成功",
+  "sale.InvoiceCard.invoiceTarget": "發票對象",
+  "sale.InvoiceCard.uniformNumber": "發票統編",
+  "sale.InvoiceCard.uniformTitle": "發票抬頭",
+  "sale.OrderCard.nameAndEmail": "姓名 / Email",
+  "sale.OrderCard.orderCreatedAt": "訂單建立",
+  "sale.OrderCard.orderDiscountItem": "折抵項目",
+  "sale.OrderCard.orderId": "訂單編號",
+  "sale.OrderCard.orderProductItem": "產品項目",
+  "sale.OrderCard.totalPrice": "訂單總額",
+  "sale.OrderDetailDrawer.invoiceInfo": "發票資訊",
+  "sale.OrderDetailDrawer.orderDetail": "訂單詳情",
+  "sale.OrderDetailDrawer.orderInfo": "訂單資訊",
+  "sale.OrderDetailDrawer.otherInfo": "其他資訊",
+  "sale.OrderDetailDrawer.paymentInfo": "交易紀錄",
+  "sale.OrderOtherInfoCard.country": "國家",
+  "sale.OrderOtherInfoCard.giftPlan": "贈品項目",
+  "sale.OrderOtherInfoCard.orderLogExecutor": "承辦人與分潤",
+  "sale.OrderOtherInfoCard.recipientAddress": "收件地址",
+  "sale.OrderOtherInfoCard.recipientName": "收件人",
+  "sale.OrderOtherInfoCard.recipientPhone": "收件電話",
+  "sale.OrderOtherInfoCard.referrer": "推薦人",
+  "sale.OrderOtherInfoCard.sharingCode": "推廣網址",
+  "sale.OrderOtherInfoCard.sharingNote": "推廣用途",
+  "sale.PaymentCard.gateway": "交易渠道",
+  "sale.PaymentCard.paidAt": "付款時間",
+  "sale.PaymentCard.paymentNo": "交易編號",
+  "sale.PaymentCard.paymentStatus": "交易狀態",
+  "sale.PaymentCard.price": "金額",
   "sale.SaleCollectionAdminCard.cancel": "取消",
   "sale.SaleCollectionAdminCard.deliver": "交付",
   "sale.SaleCollectionAdminCard.open": "开通",
