--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -597,7 +597,7 @@
   "common.label.owner": "建立者",
   "common.label.pageTitle": "Page Title",
   "common.label.participant": "參與者",
-  "common.label.participantPosition": "職位",
+  "common.label.participantOccupation": "職位",
   "common.label.participants": "人數",
   "common.label.password": "密碼",
   "common.label.paymentCreatedAt": "交易時間",
@@ -771,6 +771,7 @@
   "common.status.expired": "到期",
   "common.status.finished": "已結束",
   "common.status.invisible": "隱藏",
+  "common.status.marked": "被標記",
   "common.status.noAuthority": "無此權限",
   "common.status.notComplete": "尚有未完成項目",
   "common.status.notPublished": "未發佈",
@@ -812,6 +813,7 @@
   "common.text.locale": "當前台為指定語系時才會顯示，若不選擇全語系皆顯示",
   "common.text.minutes": "{minutes} 分鐘",
   "common.text.noAssignedInstructor": "尚未指定講師",
+  "common.text.ogImageTips": "建議圖片尺寸：1200*630px",
   "common.text.period": "，",
   "common.text.purchasedAt": "{name} 於 {date} 購買",
   "common.text.resetPasswordNotation": "為了安全考量，請至信箱收信更換密碼",
@@ -902,6 +904,7 @@
   "common.ui.publish": "立即發佈",
   "common.ui.register": "註冊",
   "common.ui.registerNow": "立即註冊",
+  "common.ui.reject": "拒絕",
   "common.ui.rename": "重新命名",
   "common.ui.reply": "回覆",
   "common.ui.reset": "重置",
@@ -909,6 +912,7 @@
   "common.ui.save": "儲存",
   "common.ui.search": "查詢",
   "common.ui.selectFile": "選擇檔案",
+  "common.ui.send": "送出",
   "common.ui.sendEmailAgain": "再寄一次",
   "common.ui.set": "設為",
   "common.ui.showCreator": "顯示講師",
@@ -1389,8 +1393,11 @@
   "form.PermissionGroup.PROJECT_FUNDING_NORMAL": "個人募資專案功能",
   "form.PermissionGroup.PROJECT_NORMAL": "個人專案功能",
   "form.PermissionGroup.PROJECT_ON_SALE_ADMIN": "促銷專案功能",
+  "form.PermissionGroup.PROJECT_PORTFOLIO_ADMIN": "所有作品專案功能",
+  "form.PermissionGroup.PROJECT_PORTFOLIO_NORMAL": "個人作品專案功能",
   "form.PermissionGroup.PROJECT_PRE_ORDER_ADMIN": "預購專案功能",
   "form.PermissionGroup.PROJECT_PRE_ORDER_NORMAL": "個人預購專案功能",
+  "form.PermissionGroup.PROJECT_ROLE_ADMIN": "角色管理",
   "form.PermissionGroup.SALES_CALL_ADMIN": "檢視業務專區",
   "form.PermissionGroup.SALES_EXPORT": "匯出所有訂單",
   "form.PermissionGroup.SALES_LEAD_ADMIN": "名單撥打",
@@ -1654,6 +1661,7 @@
   "order.label.invoiceUniformTitle": "發票抬頭",
   "order.label.memberEmail": "會員信箱",
   "order.label.memberName": "會員姓名",
+  "order.label.orderCountry": "下單國家",
   "order.label.orderCreatedAt": "訂單建立時間",
   "order.label.orderDiscountName": "折扣名稱",
   "order.label.orderDiscountTotalPrice": "折扣總額",
@@ -2171,6 +2179,7 @@
   "project.*.editProject": "編輯方案",
   "project.*.expireAt": "截止日",
   "project.*.fundingTerm": "募資條件",
+  "project.*.noMarkedPortfolio": "尚未被任何作品標記",
   "project.*.noProject": "尚未有任何專案",
   "project.*.participantsAmount": "參與人數",
   "project.*.portfolioTitle": "名稱",
@@ -2195,7 +2204,10 @@
   "project.ProjectAdminPage.publishSettings": "上架設定",
   "project.ProjectBasicForm.tag": "標籤",
   "project.ProjectCollectionTable.author": "作者",
+  "project.ProjectCollectionTable.mark": "標記",
   "project.ProjectCollectionTable.title": "名稱",
+  "project.ProjectParticipantBlock.occupationFieldRequired": "請選擇職位",
+  "project.ProjectParticipantBlock.participantFieldRequired": "請選擇參與者",
   "project.ProjectPlanAdminModal.deliverables": "交付項目",
   "project.ProjectPlanCard.notSale": "已停售",
   "project.ProjectPlanCard.onSale": "發售中",
@@ -2206,9 +2218,13 @@
   "project.ProjectPlanProductSelector.sku": "料號（SKU）",
   "project.ProjectPortfolioBasicForm.tag": "標籤",
   "project.ProjectPortfolioSettingsForm.cover": "封面",
+  "project.ProjectPortfolioSettingsForm.creator": "發佈者：{name}",
   "project.ProjectPortfolioSettingsForm.defaultImageTips": "建議圖片尺寸：1200*675px",
   "project.ProjectPortfolioSettingsForm.defaultVideoTips": "放入影片網址後，如未出現影片預覽，請確認網址是否正確",
   "project.ProjectPortfolioSettingsForm.hasSameOriginalSource": "平台上已有相同來源的作品",
+  "project.ProjectPortfolioSettingsForm.hasSameOriginalSourceNotice1": "(1)作品中的其他團隊成員已經上傳過作品，您可以至作品專頁申請標記成為工作人員之一。",
+  "project.ProjectPortfolioSettingsForm.hasSameOriginalSourceNotice2": "(2)該作品很有可能已經侵權，您可針對該作品進行檢舉下架。",
+  "project.ProjectPortfolioSettingsForm.hasSameOriginalSourceNoticeTitle": "相同來源作品的可能性：",
   "project.ProjectPortfolioSettingsForm.videoUrl": "影片作品網址",
   "project.ProjectPublishAdminBlock.activateNow": "立即發布",
   "project.ProjectPublishAdminBlock.activateShop": "發佈專案",
@@ -2222,6 +2238,10 @@
   "project.ProjectPublishAdminBlock.publishedPortfolioNotation": "現在你的作品已發佈，此作品會出現在頁面上。",
   "project.ProjectPublishAdminBlock.unpublishedNotation": "你的專案未發佈，此專案並不會顯示在頁面上。",
   "project.ProjectPublishAdminBlock.unpublishedPortfolioNotation": "你的作品未發佈，此作品並不會顯示在頁面上。",
+  "project.ProjectRejectMarkModal.hasRejectedMark": "已拒絕標記",
+  "project.ProjectRejectMarkModal.pleaseEnterAReasonForRejection": "請輸入拒絕原因",
+  "project.ProjectRejectMarkModal.reason": "原因",
+  "project.ProjectRejectMarkModal.rejectMark": "拒絕標記",
   "project.label.isParticipantsVisible": "購買人數",
   "project.label.isPublished": "是否開賣",
   "project.label.planDescription": "方案描述",
@@ -2340,6 +2360,46 @@
   "questionLibrary.ui.isAnswer": "此為正確解答",
   "questionLibrary.ui.sortQuestions": "排序題目",
   "questionLibrary.ui.useZhuYinFont": "使用注音字形",
+  "sale.InvoiceCard.donationCode": "發票捐贈碼",
+  "sale.InvoiceCard.invoiceAddress": "發票地址",
+  "sale.InvoiceCard.invoiceCarrier": "發票載具",
+  "sale.InvoiceCard.invoiceEmail": "聯絡信箱",
+  "sale.InvoiceCard.invoiceFailed": "開立失敗 {errorCode}",
+  "sale.InvoiceCard.invoiceIssuedAt": "發票開立時間",
+  "sale.InvoiceCard.invoiceName": "發票姓名",
+  "sale.InvoiceCard.invoiceNumber": "發票編號",
+  "sale.InvoiceCard.invoicePending": "未開立電子發票",
+  "sale.InvoiceCard.invoicePhone": "發票電話",
+  "sale.InvoiceCard.invoiceStatus": "發票狀態",
+  "sale.InvoiceCard.invoiceSuccess": "開立成功",
+  "sale.InvoiceCard.invoiceTarget": "發票對象",
+  "sale.InvoiceCard.uniformNumber": "發票統編",
+  "sale.InvoiceCard.uniformTitle": "發票抬頭",
+  "sale.OrderCard.nameAndEmail": "姓名 / Email",
+  "sale.OrderCard.orderCreatedAt": "訂單建立",
+  "sale.OrderCard.orderDiscountItem": "折抵項目",
+  "sale.OrderCard.orderId": "訂單編號",
+  "sale.OrderCard.orderProductItem": "產品項目",
+  "sale.OrderCard.totalPrice": "訂單總額",
+  "sale.OrderDetailDrawer.invoiceInfo": "發票資訊",
+  "sale.OrderDetailDrawer.orderDetail": "訂單詳情",
+  "sale.OrderDetailDrawer.orderInfo": "訂單資訊",
+  "sale.OrderDetailDrawer.otherInfo": "其他資訊",
+  "sale.OrderDetailDrawer.paymentInfo": "交易紀錄",
+  "sale.OrderOtherInfoCard.country": "國家",
+  "sale.OrderOtherInfoCard.giftPlan": "贈品項目",
+  "sale.OrderOtherInfoCard.orderLogExecutor": "承辦人與分潤",
+  "sale.OrderOtherInfoCard.recipientAddress": "收件地址",
+  "sale.OrderOtherInfoCard.recipientName": "收件人",
+  "sale.OrderOtherInfoCard.recipientPhone": "收件電話",
+  "sale.OrderOtherInfoCard.referrer": "推薦人",
+  "sale.OrderOtherInfoCard.sharingCode": "推廣網址",
+  "sale.OrderOtherInfoCard.sharingNote": "推廣用途",
+  "sale.PaymentCard.gateway": "交易渠道",
+  "sale.PaymentCard.paidAt": "付款時間",
+  "sale.PaymentCard.paymentNo": "交易編號",
+  "sale.PaymentCard.paymentStatus": "交易狀態",
+  "sale.PaymentCard.price": "金額",
   "sale.SaleCollectionAdminCard.cancel": "取消",
   "sale.SaleCollectionAdminCard.deliver": "交付",
   "sale.SaleCollectionAdminCard.open": "開通",
@@ -2422,161 +2482,5 @@
   "voucher.status.redeemable": "可兌換",
   "voucher.text.fromNow": "即日起",
   "voucher.text.items": "個項目",
-  "voucher.text.noUsePeriod": "無使用期限",
-  "page.QuestionLibraryCollectionPage.questionLibraryCollection": "題庫管理",
-  "page.QuestionLibraryCollectionPage.deleteQuestionLibraryMessage": "確定刪除此題庫？",
-  "page.QuestionGroupCollectionPage.questionGroupCollection": "題組管理",
-  "page.QuestionGroupCollectionPage.deleteQuestionGroupMessage": "確定刪除此題組？",
-  "page.QuestionLibraryAdminPage.questionGroupManagement": "題庫管理",
-  "page.QuestionLibraryAdminPage.questionLibrarySettings": "題庫設定",
-  "page.QuestionLibraryAdminPage.noMemberId": "無使用者ID",
-  "page.QuestionLibraryAdminPage.deleteQuestionGroupMessage": "確定刪除此題組？",
-  "page.QuestionLibraryBasicForm.questionGroupManagement": "題庫管理",
-  "page.QuestionGroupAdminPage.question": "題目",
-  "page.QuestionGroupAdminPage.option": "選項",
-  "questionLibrary.ui.sortQuestions": "排序題目",
-  "questionLibrary.ui.addQuestion": "新增題目",
-  "questionLibrary.ui.useZhuYinFont": "使用注音字形",
-  "questionLibrary.ui.isAnswer": "此為正確解答",
-  "questionLibrary.ui.addOption": "新增選項",
-  "questionLibrary.input.untitledQuestionLibrary": "未命名題庫",
-  "questionLibrary.input.addQuestionLibrary": "建立題庫",
-  "questionLibrary.input.untitledQuestionGroup": "未命名題組",
-  "questionLibrary.input.addQuestionGroup": "新增題組",
-  "questionLibrary.label.noQuestionLibrary": "尚未建立任何題庫",
-  "questionLibrary.label.noQuestionGroup": "尚未建立任何題組",
-  "questionLibrary.label.latestUpdatedAt": "最後修改時間",
-  "questionLibrary.label.totalQuestions": "總題數",
-  "questionLibrary.label.totalQuestionGroups": "題組數",
-  "questionLibrary.label.basicFormTitle": "題庫名稱",
-  "questionLibrary.label.basicFormAbstract": "題庫簡述",
-  "questionLibrary.label.questionLibrary": "題庫",
-  "questionLibrary.label.examName": "測驗名稱",
-  "questionLibrary.label.layout": "版型選項",
-  "questionLibrary.label.explanation": "解答說明",
-  "questionLibrary.label.createNewQuestionGroup": "建立新題組",
-  "questionLibrary.label.importFromQuestionLibrary": "從題庫匯入",
-  "questionLibrary.label.randomlySelectFromQuestionLibrary": "題庫隨機抽題",
-  "questionLibrary.label.basicSettings": "基本設定",
-  "questionLibrary.label.renameQuestionGroup": "重新命名題組",
-  "questionLibrary.label.confirmDuplicateQuestionGroup": "確認複製此題組?",
-  "questionLibrary.label.draw": "從中抽",
-  "questionLibrary.label.questions": "題",
-  "questionLibrary.message.successDeletedQuestionLibrary": "刪除題庫成功",
-  "questionLibrary.message.successDeletedQuestionGroup": "刪除題組成功",
-  "questionLibrary.message.failDeletedQuestionGroup": "刪除題組失敗",
-  "questionLibrary.message.successSortQuestionGroup": "排序題目成功",
-  "questionLibrary.message.failSortQuestionGroup": "排序題目失敗",
-  "questionLibrary.message.failAddQuestionGroup": "新增題組失敗",
-  "questionLibrary.message.successDuplicateQuestionGroup": "複製題組成功",
-  "questionLibrary.message.failDuplicateQuestionGroup": "複製題組失敗",
-  "questionLibrary.message.questionLibraryTitleCanNotNull": "題庫名稱不可為空",
-  "questionLibrary.message.questionGroupTitleCanNotNull": "題組名稱不可為空",
-  "questionLibrary.message.exceededQuantityOfDraws": "超過可抽選的數量",
-  "questionLibrary.message.atLeastChooseOneQuestionGroup": "請選擇至少一個題組!",
-  "common.ui.duplicate": "複製",
-  "common.ui.rename": "重新命名",
-  "admin.AdminMenu.questionLibraryManagement": "題庫管理",
-  "admin.AdminMenu.questionGroupManagement": "題組管理",
-  "admin.AdminMenu.questionLibraryAdmin": "題目庫",
-  "page.QuestionGroupAdminPage.questionTextDescription": "題目文字描述",
-  "admin.AdminMenu.venueManagement": "場地管理",
-  "admin.AdminMenu.giftPlans": "贈品方案",
-  "page.GiftPlanCollectionAdminPage.giftPlan": "贈品方案",
-  "giftPlan.GiftPlanCollectionAdminModal.title": "贈品方案名稱",
-  "giftPlan.GiftPlanCollectionAdminModal.giftItemName": "贈品項目",
-  "giftPlan.GiftPlanCollectionAdminModal.isDeliverable": "需索取寄送地址",
-  "giftPlan.GiftPlanCollectionAdminModal.isNotDeliverable": "線上自行交付",
-  "promotion.*.isRequired": "請輸入{field}",
-  "promotion.ui.createGiftPlan": "建立贈品",
-  "page.*.discontinued": "已下架",
-  "giftPlan.GiftPlanDeleteAdminModal.deleteGriftPlanMessage": "確定刪除此贈品方案？",
-  "common.ui.discontinue": "下架",
-  "giftPlan.GiftPlanPublishAdminModal.discontinueGriftPlanMessage": "確定下架此贈品方案？",
-  "giftPlan.GiftPlanCollectionAdminModal.editGiftPlan": "編輯贈品方案",
-  "giftPlan.GiftPlanCollectionAdminModal.giftCover": "贈品封面",
-  "giftPlan.GiftPlanCollectionAdminModal.giftDeliverMethod": "贈品交付方式",
-  "GiftPlanCollectionAdminPage.GiftPlanCollectionBlock.createAt": "建立日期",
-  "giftPlan.GiftPlanCollectionAdminModal.giftCoverTips": "建議圖片尺寸：600*600px",
-  "giftPlan.GiftPlanCollectionAdminModal.titleIsRequired": "贈品方案名稱為必填",
-  "giftPlan.GiftPlanCollectionAdminModal.customGiftNameIsRequired": "贈品項目為必填",
-  "common.label.allGiftPlan": "所有贈品方案",
-  "form.*.startedAt": "開始日期",
-  "form.*.endedAt": "截止日期",
-  "form.GiftPlanInput.pleaseSelectAGiftPlan": "請選擇一個贈品方案",
-  "form.GiftPlanInput.noGiftPlan": "無贈品",
-  "form.GiftPlanInput.hasGiftPlan": "有贈品",
-  "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
-  "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
-  "form.GiftPlanInput.pleaseCreateGiftPlan": "請新增贈品方案",
-  "craft.label.generalSettings": "一般設定",
-  "common.label.pageTitle": "Page Title",
-  "common.label.seoDescription": "description",
-  "common.label.keywords": "keywords",
-  "common.label.seoSettings": "SEO 設定",
-  "order.label.gift": "贈品項目",
-  "order.label.recipientName": "收件人",
-  "order.label.recipientPhone": "收件電話",
-  "order.label.recipientAddress": "收件地址",
-  "common.ui.hasGiftPlan": "附贈品",
-  "common.unit.monthWithQuantifier": "個月",
-  "common.label.openGraphSettings": "Open Graph 設定",
-  "common.label.ogTitle": "og:title",
-  "common.label.ogDescription": "og:description",
-  "common.label.ogImage": "og:image",
-  "common.label.ogImageAlt": "og:image:alt",
-  "common.placeholder.useCommaToSeparateKeywords": "關鍵字需以「 , 」做為區隔",
-  "admin.AdminMenu.projectPortfolio": "作品專案",
-  "common.menu.projectPortfolio": "作品專案",
-  "page.ProjectPortfolioPage.createPortfolio": "建立作品",
-  "page.ProjectPortfolioPage.untitledPortfolio": "未命名的作品",
-  "page.ProjectPortfolioPage.projectTitle": "名稱",
-  "project.ProjectCollectionTable.title": "名稱",
-  "project.ProjectCollectionTable.author": "作者",
-  "admin.AdminMenu.projectCategory": "專案分類",
-  "common.menu.projectCategory": "專案分類",
-  "project.ProjectAdminPage.portfolioContent": "作品內容",
-  "project.ProjectAdminPage.portfolioManagement": "作品管理",
-  "project.ProjectAdminPage.publishSettings": "上架設定",
-  "project.ProjectPortfolioSettingsForm.cover": "封面",
-  "project.ProjectPortfolioSettingsForm.defaultImageTips": "建議圖片尺寸：1200*675px",
-  "project.ProjectPortfolioSettingsForm.videoUrl": "影片作品網址",
-  "project.ProjectAdminPage.portfolioSettings": "作品設定",
-  "project.ProjectAdminPage.portfolioDescription": "作品描述",
-  "project.ProjectPortfolioBasicForm.tag": "標籤",
-  "project.ProjectAdminPage.deletePortfolio": "刪除作品",
-  "project.*.portfolioTitle": "名稱",
-  "admin.AdminMenu.projectRole": "角色管理",
-  "common.menu.roleManagement": "角色管理",
-  "common.label.participant": "參與者",
-  "common.ui.addParticipant": "新增參與者",
-  "common.label.selectParticipant": "選擇參與者",
-  "common.label.participantOccupation": "職位",
-  "common.ui.editParticipant": "編輯參與者",
-  "common.label.portfolioPublishSettings": "上架設定",
-  "project.ProjectPublishAdminBlock.noAuthor": "作者不可為空",
-  "project.ProjectPublishAdminBlock.noVideoUrl": "影片作品網址",
-  "project.ProjectPublishAdminBlock.notCompletePortfolioNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
-  "project.ProjectPublishAdminBlock.unpublishedPortfolioNotation": "你的作品未發佈，此作品並不會顯示在頁面上。",
-  "project.ProjectPublishAdminBlock.publishedPortfolioNotation": "現在你的作品已發佈，此作品會出現在頁面上。",
-  "project.ProjectPublishAdminBlock.activateNow": "立即發布",
-  "common.text.unpublishingWarning": "將下架且不會出現在列表，已擁有權益的會員仍然可以看到內容。",
-  "project.ProjectPortfolioSettingsForm.defaultVideoTips": "放入影片網址後，如未出現影片預覽，請確認網址是否正確",
-  "project.ProjectPortfolioSettingsForm.hasSameOriginalSource": "平台上已有相同來源的作品",
-  "project.ProjectParticipantBlock.participantFieldRequired": "請選擇參與者",
-  "project.ProjectParticipantBlock.occupationFieldRequired": "請選擇職位",
-  "project.ProjectPortfolioSettingsForm.hasSameOriginalSourceNoticeTitle": "相同來源作品的可能性：",
-  "project.ProjectPortfolioSettingsForm.hasSameOriginalSourceNotice1": "(1)作品中的其他團隊成員已經上傳過作品，您可以至作品專頁申請標記成為工作人員之一。",
-  "project.ProjectPortfolioSettingsForm.hasSameOriginalSourceNotice2": "(2)該作品很有可能已經侵權，您可針對該作品進行檢舉下架。",
-  "project.ProjectPortfolioSettingsForm.creator": "發佈者：{name}",
-  "common.text.ogImageTips": "建議圖片尺寸：1200*630px",
-  "common.status.marked": "被標記",
-  "project.ProjectCollectionTable.mark": "標記",
-  "common.ui.send": "送出",
-  "project.ProjectRejectMarkModal.rejectMark": "拒絕標記",
-  "project.ProjectRejectMarkModal.reason": "原因",
-  "project.ProjectRejectMarkModal.pleaseEnterAReasonForRejection": "請輸入拒絕原因",
-  "common.ui.reject": "拒絕",
-  "project.ProjectRejectMarkModal.hasRejectedMark": "已拒絕標記",
-  "project.*.noMarkedPortfolio": "尚未被任何作品標記"
+  "voucher.text.noUsePeriod": "無使用期限"
 }
