[REFACTOR]: expands functionalities of ProductSelector

--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -749,6 +749,11 @@
   "common.product.allProgramPackagePlan": "Semua Paket Program",
   "common.product.allProgramPlan": "Semua Paket Program",
   "common.product.allProjectPlan": "Semua Proyek",
+  "common.label.allProjectPlan": "All Project Plan",
+  "common.label.allAppointmentPlan": "All Appointment Plan",
+  "common.label.allPodcastPlan": "All Podcast Plan",
+  "common.label.allCouponPlan": "All Coupon Plan",
+  "common.label.allVocherPlan": "All Vocher Plan",
   "common.product.appointmentPlan": "Janji",
   "common.product.card": "Kartu",
   "common.product.merchandise": "Merchandise",
