--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -749,6 +749,11 @@
   "common.product.allProgramPackagePlan": "全部课程组合",
   "common.product.allProgramPlan": "全部课程方案",
   "common.product.allProjectPlan": "全部专案",
+  "common.label.allProjectPlan": "全部專案",
+  "common.label.allAppointmentPlan": "全部預約",
+  "common.label.allPodcastPlan": "全部廣播訂閱頻道",
+  "common.label.allCouponPlan": "所有折價方案",
+  "common.label.allVocherPlan": "所有兌換方案",
   "common.product.appointmentPlan": "预约",
   "common.product.card": "会员卡",
   "common.product.merchandise": "商品",
