--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -749,6 +749,11 @@
   "common.product.allProgramPackagePlan": "全部課程組合",
   "common.product.allProgramPlan": "全部課程方案",
   "common.product.allProjectPlan": "全部專案",
+  "common.label.allProjectPlan": "全部專案",
+  "common.label.allAppointmentPlan": "全部預約",
+  "common.label.allPodcastPlan": "全部廣播訂閱頻道",
+  "common.label.allCouponPlan": "所有折價方案",
+  "common.label.allVocherPlan": "所有兌換方案",
   "common.product.appointmentPlan": "預約",
   "common.product.card": "會員卡",
   "common.product.merchandise": "商品",
