--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -749,6 +749,11 @@
   "common.product.allProgramPackagePlan": "All Program Packages",
   "common.product.allProgramPlan": "All Program Plan",
   "common.product.allProjectPlan": "All Projects",
+  "common.label.allProjectPlan": "All Project Plan",
+  "common.label.allAppointmentPlan": "All Appointment Plan",
+  "common.label.allPodcastPlan": "All Podcast Plan",
+  "common.label.allCouponPlan": "All Coupon Plan",
+  "common.label.allVocherPlan": "All Vocher Plan",
   "common.product.appointmentPlan": "Appointment",
   "common.product.card": "Card",
   "common.product.merchandise": "Merchandise",
