[FEATURE] apply new ProductSelector to OrderExportModal

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -583,6 +583,7 @@
   "common.label.orderLogPrice": "Order Price",
   "common.label.orderLogPriceTotal": "Order Total",
   "common.label.orderLogStatus": "Order Status",
+  "common.label.orderLogCategory": "Order Category",
   "common.label.orderLogUpdatedDate": "Updated Date",
   "common.label.orderProductAmount": "Item Amount",
   "common.label.orderProductAutoRenew": "Auto Renew",
