--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -583,6 +583,7 @@
   "common.label.orderLogPrice": "訂單金額",
   "common.label.orderLogPriceTotal": "訂單總額",
   "common.label.orderLogStatus": "訂單狀態",
+  "common.label.orderLogCategory": "訂單項目",
   "common.label.orderLogUpdatedDate": "更新日期",
   "common.label.orderProductAmount": "項目數量",
   "common.label.orderProductAutoRenew": "自動續訂",
@@ -592,6 +593,7 @@
   "common.label.orderProductPriceTotal": "項目總額",
   "common.label.orderProductType": "項目種類",
   "common.label.orderStatus": "訂單狀態",
+  "common.label.orderCategory": "訂單項目",
   "common.label.originalPrice": "原價",
   "common.label.ownedCoins": "持有代幣",
   "common.label.owner": "建立者",
@@ -937,6 +939,10 @@
   "common.unit.month": "月",
   "common.unit.second": "秒",
   "common.unit.week": "週",
+  "common.category.all": "全部產品",
+  "common.category.specify": "指定產品",
+  "common.category.specifyCouponPlan": "指定折價方案",
+  "common.category.specifyVoucherPlan": "指定兌換方案",
   "contract.event.successfullyRevoked": "合約已解除！",
   "contract.status.agreed": "已簽署",
   "contract.status.pending": "未簽署",
