--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -584,6 +584,7 @@
   "common.label.orderLogPriceTotal": "Total Pesanan",
   "common.label.orderLogStatus": "Status Pesanan",
   "common.label.orderLogCategory": "Order Category",
+  "common.label.otherSpecifyCategories": "Other Specify Categories",
   "common.label.orderLogUpdatedDate": "Tanggal Diperbarui",
   "common.label.orderProductAmount": "Jumlah Barang",
   "common.label.orderProductAutoRenew": "Perpanjangan Otomatis",
