--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -584,6 +584,7 @@
   "common.label.orderLogPriceTotal": "订单总额",
   "common.label.orderLogStatus": "订单状态",
   "common.label.orderLogCategory": "訂單項目",
+  "common.label.otherSpecifyCategories": "其他特定項目",
   "common.label.orderLogUpdatedDate": "更新日期",
   "common.label.orderProductAmount": "项目数量",
   "common.label.orderProductAutoRenew": "自动续订",
